--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -41,6 +39,8 @@ dependencies:
   get: any
   http: any
   image: any
+  image_cropper: ^3.0.1
+  dotted_border: ^2.0.0+3
 
 dev_dependencies:
   flutter_test:
